--- a/C#/WpfApp1/MainWindow.xaml
+++ b/C#/WpfApp1/MainWindow.xaml
@@ -6,38 +6,69 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="10,-14,39,31">
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="30"/>
             <ColumnDefinition/>
-            <ColumnDefinition Width="30"/>
             <ColumnDefinition/>
-            <ColumnDefinition Width="30"/>
         </Grid.ColumnDefinitions>
-        <GroupBox x:Name="Emission" Header="Emission" Margin="0" RenderTransformOrigin="0.5,0.5" BorderBrush="Black" Background="#FFDDDDDD" Grid.Column="1" Grid.Row="1">
-            <GroupBox.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-0.395"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </GroupBox.RenderTransform>
-            <TextBox x:Name="textBoxEmission" Margin="0" TextWrapping="Wrap" Background="{x:Null}" SelectionBrush="#FFDDDDDD" BorderBrush="Black" AcceptsReturn="True" KeyUp="textBoxEmission_KeyUp"/>
+        <GroupBox  Header="Emission" Background="#FFDDDDDD" BorderBrush="Black" Grid.Column="0" Grid.Row="0" Margin="5">
+            <TextBox x:Name="textBoxEmission"/>
         </GroupBox>
-        <GroupBox x:Name="Reception" Header="Reception" Margin="0" BorderBrush="Black" Background="#FFDDDDDD" Grid.Column="3" Grid.Row="1">
-            <TextBox x:Name="textBoxReception" Margin="0,0,0,-3" TextWrapping="Wrap" Background="#FFDDDDDD" BorderBrush="#FFDDDDDD" IsReadOnly="True"/>
+        <GroupBox Header="Réception" Background="#FFDDDDDD" BorderBrush="Black" Grid.Column="1" Grid.Row="0" Margin="5">
+            <TextBox x:Name="textBoxReception"/>
         </GroupBox>
-        <Button x:Name="buttonEnvoyer" Content="Envoyer" Grid.Column="1" HorizontalAlignment="Left" Margin="123,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="100" Height="30" Click="buttonEnvoyer_Click"/>
-        <Button x:Name="buttonClear" Content="Clear" Grid.Column="3" HorizontalAlignment="Left" Height="30" Margin="155,1,0,0" Grid.Row="3" Grid.RowSpan="2" VerticalAlignment="Top" Width="78" Click="buttonClear_Click"/>
-        <Button x:Name="buttonTest" Content="Test" Grid.Column="1" HorizontalAlignment="Left" Margin="332,3,0,0" Grid.Row="3" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="3" Height="26" Click="buttonTest_Click"/>
+
+        <Button x:Name="ButtonEnvoyer" Content="Envoyer" Grid.Column="0" Grid.Row="1" Width="100" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" Click="ButtonEnvoyer_Click_1"/>
+        <Button x:Name="Clear" Content="Clear" Grid.Column="1" Grid.Row="1" Width="100" Height="30" Click="button_Click" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Button x:Name="Test" Grid.ColumnSpan="2" Content="Test" Grid.Column="0" Grid.Row="1" Width="75" Height="30" Click="Test_Click"/>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left">
+            <GroupBox Header="Leds" Width="200" Height="300" >
+                <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left">
+                    <GroupBox Header="Led1" Width="100" Height="40" >
+                        <CheckBox x:Name="CheckBoxLed1" Checked="Led1_Checked"  HorizontalAlignment="Left" Width="24"/>
+                    </GroupBox>
+                    <GroupBox Header="Led2" Width="100" Height="50" >
+                        <CheckBox x:Name="CheckBoxLed2"  HorizontalAlignment="Left" Checked="Led2_Checked" Margin="0,2,0,0" Height="24" VerticalAlignment="Top" />
+                    </GroupBox>
+                    <GroupBox Header="Led3" Width="100" Height="40" >
+                        <CheckBox x:Name="CheckBoxLed3"  HorizontalAlignment="Left"   Checked="Led3_Checked" />
+                    </GroupBox>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Télémètres IR" Width="200" Height="300">
+                <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" HorizontalAlignment="Left">
+                    <GroupBox Header="IR_Gauche (cm) :" Width="180" Height="45" >
+                        <Label x:Name="Label_IR_Gauche"  HorizontalAlignment="Center" Height="25" VerticalAlignment="Top"  Width="149"    />
+                    </GroupBox>
+                    <GroupBox Header="IR_Centre (cm):" Width="180" Height="45" >
+                        <Label x:Name="Label_IR_Centre"  HorizontalAlignment="Center" Height="25" VerticalAlignment="Top"  Width="149"   />
+                    </GroupBox>
+                    <GroupBox Header="IR_Droit (cm):" Width="180" Height="50" >
+                        <Label x:Name="Label_IR_Droit"  HorizontalAlignment="Center" Height="25" VerticalAlignment="Top"  Width="149"   />
+                    </GroupBox>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Moteurs" Width="200" Height="300" >
+                <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" HorizontalAlignment="Left">
+                    <GroupBox Header="Vitesse Gauche(%) :" Width="180" Height="45" >
+                        <Label x:Name= "Label_VitesseGauche"  HorizontalAlignment="Center" Height="25" VerticalAlignment="Top"  Width="149"   />
+                    </GroupBox>
+                    
+                    <GroupBox Header= " Vitesse Droit (%) " Width="180" Height="50" >
+                        <Label x:Name= "Label_VitesseDroit"  HorizontalAlignment="Center" Height="25" VerticalAlignment="Top"  Width="149"   />
+                    </GroupBox>
+                </StackPanel>
+            </GroupBox>
+        </StackPanel>
+
 
     </Grid>
 </Window>
